# rendition

./: Cargo.toml  LICENSE  README.md
crates/client-app/: Cargo.toml
crates/client-app/src/: lib.rs
crates/common/: Cargo.toml
crates/killcam-app/: Cargo.toml
crates/killcam-app/src/: lib.rs
crates/net-app/: Cargo.toml
crates/net-app/src/: lib.rs
crates/server-app/: Cargo.toml
crates/server-app/src/: lib.rs
crates/sim/: Cargo.toml
crates/sim/src/: lib.rs  players.rs
crates/sim/tests/: simulation_tests.rs
crates/sim/tests/determinism/: basic.rs  mod.rs
crates/sim/tests/robustness/: mod.rs
src/: client.rs  extract.rs  gui.rs  headless.rs  main.rs  net.rs  players.rs  spectators.rs
