[package]
name = "rendition"
description = "Rendition game runner."
version = "0.1.0"
edition = "2024"
license = "EUPL-1.2"
repository = "https://github.com/Waridley/rendition"
homepage = "https://github.com/Waridley/rendition"
authors = ["Waridley <Waridley64@gmail.com>"]

[features]
default = ["gui"]
gui = ["client-app", "killcam-app"] # Enabled when not running as a headless server

[workspace]
members = ["crates/*"]

[workspace.dependencies.bevy]
version = "0.16.1"

[workspace.dependencies]
bevy_enhanced_input = "0.17.0"
bird_barrier = "0.1.0"
avian3d = { version = "0.3.1", features = ["enhanced-determinism", "bevy_diagnostic"] }


[dependencies]
client-app = { package = "rendition-client-app", path = "crates/client-app", optional = true }
killcam-app = { package = "rendition-killcam-app", path = "crates/killcam-app", optional = true }
server-app = { package = "rendition-server-app", path = "crates/server-app" } # Included in client for P2P games
sim = { package = "rendition-sim", path = "crates/sim" }

bevy.workspace = true
bird_barrier.workspace = true
