[package]
name = "rendition-server-app"
description = "Rendition Server App. Included in client for P2P games, and run standalone for dedicated servers."
version = "0.1.0"
edition = "2024"
license = "EUPL-1.2"
repository = "https://github.com/Waridley/rendition"
homepage = "https://github.com/Waridley/rendition"
authors = ["Waridley <Waridley64@gmail.com>"]

[dependencies]
sim = { package = "rendition-sim", path = "../sim" }

bevy.workspace = true
