[package]
name = "rendition-sim"
description = "Core deterministic simulation for Rendition, used by the server and client."
version = "0.1.0"
edition = "2024"
license = "EUPL-1.2"
repository = "https://github.com/Waridley/rendition"
homepage = "https://github.com/Waridley/rendition"
authors = ["Waridley <Waridley64@gmail.com>"]

[dependencies]
bevy.workspace = true
avian3d.workspace = true
